[ACADEMICS] Commit garbled bytes version of malloc lab

--- a/study_resources/18600_fcs/malloc-handout/Makefile
+++ b/study_resources/18600_fcs/malloc-handout/Makefile
@@ -6,7 +6,9 @@ CC = gcc
 # Compiler for mm.c
 CLANG = clang
 # Change this to -O0 (big-Oh, numeral zero) if you need to use a debugger on your code
-COPT = -O3
+# COPT = -O3
+COPT = -O0
+
 CFLAGS = -Wall -Wextra -Werror $(COPT) -g -DDRIVER -Wno-unused-function -Wno-unused-parameter
 LIBS = -lm -lrt
 
@@ -15,7 +17,7 @@ NOBJS = mdriver.o mm-native.o $(COBJS)
 EOBJS = mdriver-sparse.o mm-emulate.o $(COBJS)
 
 MC = ./macro-check.pl
-MCHECK = $(MC) 
+MCHECK = $(MC)
 
 all: mdriver mdriver-emulate
 
