[ACADEMICS] Proxy lab 70/70 submission version

--- a/study_resources/18600_fcs/proxylab-handout/Makefile
+++ b/study_resources/18600_fcs/proxylab-handout/Makefile
@@ -17,7 +17,7 @@ csapp.o: csapp.c csapp.h
 	$(CC) $(CFLAGS) $(DUVAR) -c csapp.c
 
 proxy.o: proxy.c csapp.h
-	$(CC) $(CFLAGS) $(DUVAR) -c proxy.c
+	$(CC) $(CFLAGS) $(DUVAR) $(LDFLAGS) -c proxy.c
 
 proxy: proxy.o csapp.o
 
